# space_flight

./: Cargo.toml  README.md  cargo-edit.md
log/: bevy.md
src/: main.rs
src/components/: app.rs  entities.rs  mod.rs  power_ups.rs  weapons.rs
src/config/: globals.rs  mod.rs
src/util/: terminal.rs
